--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "sass": "^1.69.5",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
-        "vue": "^3.4.0"
+        "vue": "^3.4.0",
+        "@vueuse/core": "^10.6.1",
+        "@vueuse/motion": "^2.0.0"
     }
 }
