--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "mcamara/laravel-localization": "^2.0",
         "spatie/eloquent-sortable": "^4.2",
         "spatie/laravel-medialibrary": "^11.0.0",
         "spatie/laravel-permission": "^6.4",
