--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "spatie/laravel-medialibrary": "^11.0.0",
         "spatie/laravel-permission": "^6.4",
         "spatie/laravel-sluggable": "^3.6",
+        "symfony/panther": "^2.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
