--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^5.0.0",
+        "@vueuse/core": "^10.6.1",
+        "@vueuse/motion": "^2.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "flowbite": "^2.1.1",
@@ -19,8 +21,10 @@
         "sass": "^1.69.5",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
-        "vue": "^3.4.0",
-        "@vueuse/core": "^10.6.1",
-        "@vueuse/motion": "^2.0.0"
+        "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@vueform/slider": "^2.1.10",
+        "vuex": "^4.0.2"
     }
 }
