--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+ELASTICSEARCH_ENABLED=true
+ELASTICSEARCH_HOSTS="localhost:6200"
