--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@splidejs/vue-splide": "^0.6.12",
         "@vueform/slider": "^2.1.10",
         "vuex": "^4.0.2"
     }
