--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 ELASTICSEARCH_ENABLED=true
 ELASTICSEARCH_HOSTS="localhost:6200"
+
+LOGGER_TELEGRAM_CHAT_ID=
+LOGGER_TELEGRAM_BOT_TOKEN=
