--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "codewithdennis/filament-select-tree": "^3.1",
         "efureev/laravel-trees": "^4.0",
         "elasticsearch/elasticsearch": "^8.13",
         "filament/filament": "^3.2",
