--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "efureev/laravel-trees": "^4.0",
         "elasticsearch/elasticsearch": "^8.13",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
